# zon

./: .gitignore  Cargo.toml  LICENSE  README.md  bench_results.txt  launch_zon_lib.ps1
benches/: serialization_bench.rs
crates/zon-core/: Cargo.toml
crates/zon-core/benches/: bench_results.txt  serialization_bench.rs
crates/zon-core/examples/: basic.rs
crates/zon-core/src/: header.rs  lib.rs  reader.rs  writer.rs
crates/zon-inspector/: Cargo.toml
crates/zon-inspector/src/: main.rs
crates/zon-lib/src/: lib.rs
crates/zon-wasm/: Cargo.toml
crates/zon-wasm/src/: lib.rs
docs/: architecture.mdx  benchmarks.mdx  cli-inspector.mdx  installation.mdx  mint.json  node-wasm.mdx  quickstart.mdx  welcome.mdx
docs/core/: rust-writer.mdx  wasm-reader.mdx
docs/integrations/: express.mdx  fastify.mdx  fetch.mdx  nextjs.mdx  react.mdx  sockets.mdx  typescript.mdx
examples/: basic.rs
src/: header.rs  lib.rs  reader.rs  writer.rs
