[package]
name = "zon-format"
version = "0.1.0"
edition = "2021"  # Changed to 2021 for maximum compatibility
description = "6.2x faster than JSON. A zero-copy, memory-mapped data format for high-performance systems."
license = "MIT"
repository = "https://github.com/zaim-abbasi/zon"
documentation = "https://docs.rs/zon-format"
readme = "README.md"
keywords = ["serialization", "zero-copy", "performance", "json", "binary"]
categories = ["encoding", "data-structures", "parsing"]

# ... (keep your dependencies below)