[workspace]
resolver = "2"
members = [
    "crates/zon-core",
    "crates/zon-inspector",
    "crates/zon-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/zaim-abbasi/zon"

[workspace.dependencies]
zon-lib = { path = "crates/zon-core" }
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"