[package]
name = "zon-inspector"
version = "0.1.0"
edition = "2021"
description = "CLI tool to inspect and convert ZON files to JSON."
license = "MIT"
repository = "https://github.com/zaim-abbasi/zon"
keywords = ["zon", "inspector", "cli", "binary", "json"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "zon-inspector"
path = "src/main.rs"

[dependencies]
zon-lib = { version = "0.1.0", path = "../zon-core" }
serde_json = "1.0"
