[package]
name = "zon-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for ZON zero-copy serialization."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zon-core = { path = "../zon-core" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
